# Fortify-TheAppLocker

./: .gitignore  README.md
Fortify/: CMakeLists.txt  main.cpp  resources.qrc
Fortify/Docs/html/: appinfo-members.html  appinfo.html  applockerandroid-members.html  applockerandroid.html  applockermanager-members.html  applockermanager.html  applockeruimanager-members.html  applockeruimanager.html  appsettings.html  appslistmodel-members.html  appslistmodel.html  favouriteinfo-members.html  favouriteinfo.html  favouritelistmodel-members.html  favouritelistmodel.html  fortify-index.html  fortify-theapplocker.index  fortify.qhp  fortiymainapplication-module.html  how-to-make-the-app.html  qml-fortiymainapplication-qmlmodule.html  qml-qml-fortiymainapplication-favouritelistview-members.html  qml-qml-fortiymainapplication-favouritelistview.html  qml-qml-fortiymainapplication-inputfield-members.html  qml-qml-fortiymainapplication-inputfield.html  qml-qml-fortiymainapplication-installedappslistview-members.html  qml-qml-fortiymainapplication-installedappslistview.html  qml-qml-fortiymainapplication-topbar-members.html  qml-qml-fortiymainapplication-topbar.html
Fortify/android/: AndroidManifest.xml  build.gradle
Fortify/android/res/values/: strings.xml
Fortify/android/src/com/lkdw/application/applocker/Fortify/: MainActivity.java  MyService.java
Fortify/ios/: Project-Info.plist
Fortify/qdoc/: config.qdocconf
Fortify/qdoc/src/: AppInfoDoc.qdoc  Fortify-index.qdoc
Fortify/qml/: AdMobItem.qml  FavouriteListView.qml  InstalledAppsListView.qml  Main.qml  config.json
Fortify/qml/common/: InputField.qml  TopBar.qml
Fortify/src/: AppInfo.hpp  AppLockerManager.cpp  AppLockerManager.hpp  AppLockerUIManager.cpp  AppLockerUIManager.hpp  AppSettings.cpp  AppSettings.hpp  AppsListModel.cpp  AppsListModel.hpp  FavouriteInfo.hpp  FavouriteListModel.cpp  FavouriteListModel.hpp
Fortify/src/android_files/: AppLockerAndroid.cpp  AppLockerAndroid.hpp
Fortify/src/qdoc/: config.qdocconf
Fortify/src/qdoc/includes/: FortiyMainApplicationDoc
Fortify/src/qdoc/src/: Fortify-index.qdoc  FortifyInfo.qdoc  FortifyMainApplicationModule.qdoc
